--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=photogenic
+spring.data.mongodb.database=photogenicDB
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=mongodb+srv://atuljrieoal:GLAukblWBmewfDRN@cluster0.b0e1k8t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
