fine tuned controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.data.mongodb.database=photogenicDB
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.uri=mongodb+srv://atuljrieoal:GLAukblWBmewfDRN@cluster0.b0e1k8t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+
+
+background.removal.api.key=8cdvrTCcs7kU3pVNuK8457TA
+background.removal.api.url=https://api.remove.bg/v1.0/removebg
+
+background.removal.api.connect-timeout=5000
+background.removal.api.read-timeout=10000
